Updated to resolve map issue - Map was not centered due to not being full size

--- a/src/main.scss
+++ b/src/main.scss
@@ -262,7 +262,7 @@ figcaption:before {
 
 // Contact
 .map>iframe {
-    max-width: 100%;
+    width: 100%;
 }
 
 .contact {
